# lambdatheta

./: .dockerignore  README.md  Untitled  __init__.py  client.py  models.py  openenv.yaml  output.md  pyproject.toml
examples/: random_policy.py
server/: Dockerfile  __init__.py  app.py  compute_market_environment.py  requirements.txt
tests/: test_compute_market_environment.py
training/: Compute_Market_Qwen3_GRPO.ipynb  OpenEnv_gpt_oss_(20B)_Reinforcement_Learning_2048_Game.ipynb  Qwen3_(4B)_GRPO.ipynb  __init__.py  benchmark_results.md  compute_market_grpo.py  eval_compute_market_benchmark.py  minimal_grpo_rollout.py  sample_benchmark_results.md
