[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-compute-market-env"
version = "0.1.0"
description = "Compute allocation market environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "openenv-core[cli]>=0.2.1",
    "pytest>=8.2.0",
    "ruff>=0.7.0",
]
train = [
    "trl>=0.24.0",
    "transformers>=4.56.0",
]

[project.scripts]
server = "compute_market_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["compute_market_env", "compute_market_env.server"]
package-dir = {"compute_market_env" = ".", "compute_market_env.server" = "server"}

[tool.pytest.ini_options]
testpaths = ["tests"]
